--- a/videochat/src/Components/DoctorsAccount/style.css
+++ b/videochat/src/Components/DoctorsAccount/style.css
@@ -1,12 +1,11 @@
 .alerter {
-    color: red;
-    font-size: 25px;
-    font-weight: bold;
+  color: red;
+  font-size: 25px;
+  font-weight: bold;
 }
 
 #doctor-get-user {
-    margin-bottom: 15px;
-    font-size: 13pt;
+  font-size: 13pt;
 }
 
 table.doctor-account-component-client-base-list {
@@ -16,16 +15,21 @@ table.doctor-account-component-client-base-list {
   text-align: left;
   border-collapse: collapse;
 }
-table.doctor-account-component-client-base-list td, table.doctor-account-component-client-base-list th {
+
+table.doctor-account-component-client-base-list td,
+table.doctor-account-component-client-base-list th {
   border: 1px solid #AAAAAA;
   padding: 2px 3px;
 }
+
 table.doctor-account-component-client-base-list tbody td {
   font-size: 13px;
 }
+
 table.doctor-account-component-client-base-list tr:nth-child(even) {
   background: #D0E4F5;
 }
+
 table.doctor-account-component-client-base-list thead {
   background: #1C6EA4;
   background: -moz-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
@@ -33,12 +37,14 @@ table.doctor-account-component-client-base-list thead {
   background: linear-gradient(to bottom, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
   border-bottom: 2px solid #444444;
 }
+
 table.doctor-account-component-client-base-list thead th {
   font-size: 15px;
   font-weight: bold;
   color: #FFFFFF;
   border-left: 2px solid #D0E4F5;
 }
+
 table.doctor-account-component-client-base-list thead th:first-child {
   border-left: none;
 }
@@ -53,13 +59,16 @@ table.doctor-account-component-client-base-list tfoot {
   background: linear-gradient(to bottom, #dcebf7 0%, #d4e6f6 66%, #D0E4F5 100%);
   border-top: 2px solid #444444;
 }
+
 table.doctor-account-component-client-base-list tfoot td {
   font-size: 14px;
 }
+
 table.doctor-account-component-client-base-list tfoot .links {
   text-align: right;
 }
-table.doctor-account-component-client-base-list tfoot .links a{
+
+table.doctor-account-component-client-base-list tfoot .links a {
   display: inline-block;
   background: #1C6EA4;
   color: #FFFFFF;
@@ -68,7 +77,7 @@ table.doctor-account-component-client-base-list tfoot .links a{
 }
 
 
- 
+
 
 .doctor-account-component-wrapper {
   background-color: #EDEFFB;
@@ -105,6 +114,12 @@ table.doctor-account-component-client-base-list tfoot .links a{
 .doctor-account-component-grid-1-space {
   position: absolute;
   margin-top: 100px;
+  margin-left: 20px;
+}
+
+.doctor-account-component-grid-text {
+  margin-left: 20px;
+  text-align: center;
 }
 
 .doctor-account-component-grid-profile-text {
@@ -114,7 +129,7 @@ table.doctor-account-component-client-base-list tfoot .links a{
   font-style: normal;
   display: grid;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 20px;
   line-height: 10px;
   position: relative;
   color: #1C1B1D;
@@ -151,6 +166,19 @@ table.doctor-account-component-client-base-list tfoot .links a{
   height: 71px;
   font-size: 25px;
   font-family: 'Arvo';
+  transition: 0.5s;
+  -webkit-box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
+}
+
+.doctor-account-component-grid-2-start-meeting-button:hover {
+  transition: 0.25s;
+  -webkit-box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
+  filter: brightness(0.9);
+  transform: scale(0.97);
 }
 
 .doctor-account-component-client-base {
@@ -165,7 +193,7 @@ table.doctor-account-component-client-base-list tfoot .links a{
   position: relative;
   margin-left: 50px;
   margin-right: 50px;
-  width: 92.5%;
+  width: 75vw;
   height: 55vh;
   background-color: #D9D9D9;
 }
@@ -182,6 +210,7 @@ table.doctor-account-component-client-base-list tfoot .links a{
   background-color: white;
   font-family: 'Arvo';
   overflow-y: scroll;
+  box-sizing: border-box;
 }
 
 .doctor-account-component-client-base-text {
