--- a/videochat/src/Components/AdminsAccount/style.css
+++ b/videochat/src/Components/AdminsAccount/style.css
@@ -86,3 +86,94 @@
     filter: brightness(0.9);
     transform: scale(0.97);
 }
+
+.admin-rooms-modal-window-wrapper {
+    display: grid;
+    grid-template-rows: 2fr 2fr 2fr;
+    justify-content: center;
+    font-family: 'Arvo';
+    text-align: center;
+    margin-top: 35vh;
+    margin-left: 80vh;
+    border: 1px solid black;
+    border-radius: 40px;
+    width: 375px;
+    padding: 10px 0 10px 0;
+    background-color: rgba(0, 0, 0, 0.125);
+    align-items: center;
+    -webkit-box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
+    box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
+    animation-name: modal-appear;
+    animation-duration: 1.2s;
+}
+
+@keyframes modal-appear {
+    0% {
+        margin-top: -35vh;
+    }
+    100% {
+        margin-top: 35vh;
+    }
+}
+
+.admin-rooms-modal-window-info {
+    display: flex;
+    align-items: center;
+}
+
+.admin-rooms-modal-window-button {
+    display: flex;
+    justify-self: center;
+    appearance: none;
+    background-color: transparent;
+    border: 2px solid #1A1A1A;
+    background-color: #616262;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #ffffff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 15px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    min-width: 0;
+    outline: none;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 60px;
+    height: 23px;
+    will-change: transform;
+    -webkit-box-shadow: 0px 6px 16px -4px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 6px 16px -4px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 6px 16px -4px rgba(0, 0, 0, 0.75);
+}
+
+.admin-rooms-modal-window-button:disabled {
+    pointer-events: none;
+}
+
+.admin-rooms-modal-window-button:hover {
+    color: #fff;
+    background-color: #1A1A1A;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
+}
+
+.admin-rooms-modal-window-button:active {
+    box-shadow: none;
+    transform: translateY(0);
+}
+
+
+.admin-rooms-modal-window-info-text {
+    font-weight: bold;
+    color: #d81414;
+    padding-left: 3px;
+    padding-right: 3px;
+}
