--- a/videochat/src/Components/AdminsAccount/style.css
+++ b/videochat/src/Components/AdminsAccount/style.css
@@ -1,9 +1,3 @@
-.alerter {
-  color: red;
-  font-size: 25px;
-  font-weight: bold;
-}
-
 #doctor-get-user {
   font-size: 13pt;
 }
@@ -76,9 +70,6 @@ table.doctor-account-component-client-base-list tfoot .links a {
   border-radius: 5px;
 }
 
-
-
-
 .doctor-account-component-wrapper {
   background-color: #EDEFFB;
   width: 100%;
@@ -138,7 +129,6 @@ table.doctor-account-component-client-base-list tfoot .links a {
 .doctor-account-component-grid-profile-text-2 {
   padding-top: 5px;
 }
-
 
 .doctor-account-component-grid-2-section {
   width: 100%;
@@ -204,7 +194,6 @@ table.doctor-account-component-client-base-list tfoot .links a {
   background-color: #D9D9D9;
 }
 
-
 .doctor-account-component-client-base-table {
   position: relative;
   width: 97%;
@@ -233,8 +222,6 @@ table.doctor-account-component-client-base-list tfoot .links a {
 
   color: #0B0A0C;
 }
-
-
 
 .client {
   position: relative;
@@ -271,4 +258,8 @@ table.doctor-account-component-client-base-list tfoot .links a {
   right: 65%;
   bottom: 35%;
   padding: 15%;
+}
+
+.admin-account-modal-window-wrapper {
+
 }
