--- a/videochat/src/Components/DoctorsAccount/style.css
+++ b/videochat/src/Components/DoctorsAccount/style.css
@@ -181,6 +181,42 @@ table.doctor-account-component-client-base-list tfoot .links a {
   transform: scale(0.97);
 }
 
+
+
+.doctor-account-component-grid-log-out{
+  display: grid;
+  align-items: end;
+}
+
+
+.doctor-account-component-grid-log-out-button {
+  cursor: pointer;
+  position: relative;
+  color: #ffffff;
+  background-color: #344c9b;
+  border-radius: 5px;
+  border: 1px;
+  border-color: #030f52;
+  width: 100px;
+  height: 35px;
+  font-size: 16px;
+  font-family: 'Arvo';
+  transition: 0.5s;
+  -webkit-box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
+}
+
+.doctor-account-component-grid-log-out-button:hover {
+  transition: 0.25s;
+  -webkit-box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
+  filter: brightness(0.9);
+  transform: scale(0.97);
+}
+
+
 .doctor-account-component-client-base {
   font-size: 30px;
   color: #1F0044;
