--- a/videochat/src/Components/DoctorsAccount/style.css
+++ b/videochat/src/Components/DoctorsAccount/style.css
@@ -232,6 +232,7 @@ table.doctor-account-component-client-base-list tfoot .links a {
   margin-right: 50px;
   width: 75vw;
   height: 55vh;
+  border-radius: 15px;
   background-color: #D9D9D9;
 }
 
@@ -239,7 +240,7 @@ table.doctor-account-component-client-base-list tfoot .links a {
 .doctor-account-component-client-base-table {
   position: relative;
   width: 97%;
-  height: 87.5%;
+  max-height: 85%;
   margin-left: 15px;
   margin-right: 15px;
   margin-top: 15px;
