--- a/videochat/src/Components/Room/style.css
+++ b/videochat/src/Components/Room/style.css
@@ -147,7 +147,7 @@
     justify-content: center;
     font-family: 'Arvo';
     text-align: center;
-    margin-top: 35vh;
+    margin-top: 30vh;
     margin-left: 80vh;
     border: 1px solid black;
     border-radius: 40px;
@@ -158,16 +158,16 @@
     -webkit-box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
     box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
-    animation-name: modal-appear;
+    animation-name: room-modal-appear;
     animation-duration: 1.2s;
 }
 
-@keyframes modal-appear {
+@keyframes room-modal-appear {
     0% {
         margin-top: -35vh;
     }
     100% {
-        margin-top: 35vh;
+        margin-top: 30vh;
     }
 }
 
