--- a/videochat/src/Components/AdminsAccount/style.css
+++ b/videochat/src/Components/AdminsAccount/style.css
@@ -1,130 +1,164 @@
 .admin-account-component-grid-1 {
-    justify-items: center;
-    margin-top: 100px;
-    margin-bottom: 50px;
-    display: grid;
-    grid-template-columns: 2fr 2fr 2fr;
+  justify-items: center;
+  margin-top: 100px;
+  margin-bottom: 50px;
+  display: grid;
+  grid-template-columns: 2fr 2fr 2fr;
 }
 
 .admin-account-component-grid-2-create-user-button {
-    cursor: pointer;
-    position: relative;
-    color: #2C2626;
-    background-color: #A4CFE7;
-    border-radius: 5px;
-    border: 1px;
-    border-color: #4486AB;
-    width: 290px;
-    height: 71px;
-    font-size: 25px;
-    font-family: 'Arvo';
-    transition: 0.5s;
-    -webkit-box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
+  cursor: pointer;
+  position: relative;
+  color: #2C2626;
+  background-color: #A4CFE7;
+  border-radius: 5px;
+  border: 1px;
+  border-color: #4486AB;
+  width: 290px;
+  height: 71px;
+  font-size: 25px;
+  font-family: 'Arvo';
+  transition: 0.5s;
+  -webkit-box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
 }
 
 .admin-account-component-grid-2-create-user-button:hover {
-    transition: 0.25s;
-    -webkit-box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
-    filter: brightness(0.9);
-    transform: scale(0.97);
+  transition: 0.25s;
+  -webkit-box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
+  filter: brightness(0.9);
+  transform: scale(0.97);
 }
 
 .admin-account-component-grid-2-available-rooms-button {
-    cursor: pointer;
-    position: relative;
-    color: #2C2626;
-    background-color: #A4CFE7;
-    border-radius: 5px;
-    border: 1px;
-    border-color: #4486AB;
-    width: 290px;
-    height: 71px;
-    font-size: 25px;
-    font-family: 'Arvo';
-    transition: 0.5s;
-    -webkit-box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
+  cursor: pointer;
+  position: relative;
+  color: #2C2626;
+  background-color: #A4CFE7;
+  border-radius: 5px;
+  border: 1px;
+  border-color: #4486AB;
+  width: 290px;
+  height: 71px;
+  font-size: 25px;
+  font-family: 'Arvo';
+  transition: 0.5s;
+  -webkit-box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
 }
 
 .admin-account-component-grid-2-available-rooms-button:hover {
-    transition: 0.25s;
-    -webkit-box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
-    filter: brightness(0.9);
-    transform: scale(0.97);
+  transition: 0.25s;
+  -webkit-box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
+  filter: brightness(0.9);
+  transform: scale(0.97);
 }
 
 .admin-account-component-grid-2-start-meeting-button {
-    cursor: pointer;
-    position: relative;
-    color: #2C2626;
-    background-color: #A4CFE7;
-    border-radius: 5px;
-    border: 1px;
-    border-color: #4486AB;
-    width: 290px;
-    height: 71px;
-    font-size: 25px;
-    font-family: 'Arvo';
-    transition: 0.5s;
-    -webkit-box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
+  cursor: pointer;
+  position: relative;
+  color: #2C2626;
+  background-color: #A4CFE7;
+  border-radius: 5px;
+  border: 1px;
+  border-color: #4486AB;
+  width: 290px;
+  height: 71px;
+  font-size: 25px;
+  font-family: 'Arvo';
+  transition: 0.5s;
+  -webkit-box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.75);
 }
 
 .admin-account-component-grid-2-start-meeting-button:hover {
-    transition: 0.25s;
-    -webkit-box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
-    filter: brightness(0.9);
-    transform: scale(0.97);
+  transition: 0.25s;
+  -webkit-box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.75);
+  filter: brightness(0.9);
+  transform: scale(0.97);
 }
 
 .admin-rooms-modal-window-wrapper {
-    justify-content: center;
-    font-family: 'Arvo';
-    text-align: center;
-    margin-top: 15vh;
-    margin-left: 80vh;
-    border: 1px solid black;
-    border-radius: 40px;
-    width: 375px;
-    padding: 20px 0;
-    background-color: rgba(0, 0, 0, 0.125);
-    align-items: center;
-    -webkit-box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
-    box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
-    animation-name: modal-appear;
-    animation-duration: 1.2s;
+  justify-content: center;
+  font-family: 'Arvo';
+  text-align: center;
+  margin-top: 15vh;
+  margin-left: 80vh;
+  border: 1px solid black;
+  border-radius: 40px;
+  width: 375px;
+  padding: 20px 0;
+  background-color: rgba(0, 0, 0, 0.125);
+  align-items: center;
+  -webkit-box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
+  box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
+  animation-name: modal-appear;
+  animation-duration: 1.2s;
 }
 
 .admin-new-user-modal-window-wrapper {
-    display: grid;
-    justify-content: center;
-    font-family: 'Arvo';
-    text-align: center;
-    margin-top: 15vh;
-    margin-bottom: 10vh;
-    margin-left: 65vh;
-    border: 1px solid black;
-    border-radius: 40px;
-    width: 600px;
-    padding: 20px 0;
-    background-color: white;
-    align-items: center;
-    -webkit-box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
-    box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
-    animation-name: modal-appear-2;
-    animation-duration: 1.2s;
+  display: grid;
+  justify-content: center;
+  font-family: 'Arvo';
+  text-align: center;
+  margin-top: 15vh;
+  margin-bottom: 10vh;
+  margin-left: 65vh;
+  border: 1px solid black;
+  border-radius: 40px;
+  width: 600px;
+  padding: 20px 0;
+  background-color: white;
+  align-items: center;
+  -webkit-box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
+  box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
+  animation-name: modal-appear-2;
+  animation-duration: 1.2s;
+}
+
+.admin-user-modal-appointment-window-wrapper {
+  display: grid;
+  justify-content: center;
+  font-family: 'Arvo';
+  text-align: center;
+  margin-top: 20vh;
+  margin-left: 65vh;
+  border: 1px solid black;
+  border-radius: 40px;
+  width: 600px;
+  padding: 20px 0;
+  background-color: white;
+  align-items: center;
+  -webkit-box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
+  box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
+}
+
+.admin-account-appointment-connection-button {
+  background-color: #3981ff;
+  border: none;
+  border-radius: 20px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+  margin-right: 10px;
+  padding: 5px;
+  width: 300px;
+}
+
+.admin-account-appointment-connection-button:hover {
+  background-color: #3273e4;
 }
 
 .admin-new-user-modal-window-input {
@@ -186,82 +220,94 @@
 }
 
 @keyframes modal-appear {
-    0% {
-        margin-top: -35vh;
-    }
-    100% {
-        margin-top: 15vh;
-    }
+  0% {
+    margin-top: -35vh;
+  }
+
+  100% {
+    margin-top: 15vh;
+  }
 }
 
 @keyframes modal-appear-2 {
   0% {
-      margin-top: -35vh;
+    margin-top: -35vh;
   }
+
   100% {
-      margin-top: 15vh;
+    margin-top: 15vh;
+  }
+}
+
+@keyframes modal-appear-3 {
+  0% {
+    margin-top: -35vh;
+  }
+
+  100% {
+    margin-top: 20vh;
   }
 }
 
 .admin-rooms-modal-window-info {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    overflow-y: auto;
-    max-height: 450px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  overflow-y: auto;
+  max-height: 450px;
 }
 
 .admin-rooms-modal-window-button {
-    display: flex;
-    justify-self: center;
-    appearance: none;
-    background-color: transparent;
-    border: 2px solid #1A1A1A;
-    background-color: #616262;
-    border-radius: 15px;
-    box-sizing: border-box;
-    color: #ffffff;
-    cursor: pointer;
-    display: inline-block;
-    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 15px;
-    font-weight: 600;
-    line-height: normal;
-    margin-top: 5px;
-    min-width: 0;
-    outline: none;
-    text-decoration: none;
-    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    width: 60px;
-    height: 23px;
-    will-change: transform;
-    -webkit-box-shadow: 0px 6px 16px -4px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 6px 16px -4px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 6px 16px -4px rgba(0, 0, 0, 0.75);
+  display: flex;
+  justify-self: center;
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid #1A1A1A;
+  background-color: #616262;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 15px;
+  font-weight: 600;
+  line-height: normal;
+  margin-top: 5px;
+  min-width: 0;
+  outline: none;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 60px;
+  height: 23px;
+  will-change: transform;
+  -webkit-box-shadow: 0px 6px 16px -4px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 6px 16px -4px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 6px 16px -4px rgba(0, 0, 0, 0.75);
 }
 
 .admin-rooms-modal-window-button:disabled {
-    pointer-events: none;
+  pointer-events: none;
 }
 
 .admin-rooms-modal-window-button:hover {
-    color: #fff;
-    background-color: #1A1A1A;
-    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-    transform: translateY(-2px);
+  color: #fff;
+  background-color: #1A1A1A;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
 }
 
 .admin-rooms-modal-window-button:active {
-    box-shadow: none;
-    transform: translateY(0);
+  box-shadow: none;
+  transform: translateY(0);
 }
 
 .admin-rooms-modal-window-info-text {
-    padding-left: 3px;
-    padding-right: 3px;
+  padding-left: 3px;
+  padding-right: 3px;
 }
 
 .table_user_acess_level {
@@ -325,6 +371,7 @@
   grid-template-columns: 15fr 1fr;
   box-sizing: border-box;
 }
+
 .admin-modal-window-grid h2 {
   padding-left: 50px;
 }
@@ -335,6 +382,7 @@
   background-color: white;
   border: 0px;
   display: grid;
+  cursor: pointer;
 }
 
 .account-modal-window-close-button {
@@ -345,10 +393,13 @@
   display: grid;
   justify-self: end;
 }
+
 .account-modal-window-close-button:hover {
   opacity: 1;
 }
-.account-modal-window-close-button:before, .account-modal-window-close-button:after {
+
+.account-modal-window-close-button:before,
+.account-modal-window-close-button:after {
   position: absolute;
   left: 15px;
   content: ' ';
@@ -356,9 +407,11 @@
   width: 2px;
   background-color: #333;
 }
+
 .account-modal-window-close-button:before {
   transform: rotate(45deg);
 }
+
 .account-modal-window-close-button:after {
   transform: rotate(-45deg);
 }
